k8s/manifests/grafana/gateway.k8s.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https-grafana
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: grafana-cert
      hosts:
        - "grafana.oswee.local"
...
