k8s/manifests/grafana/virtual-service.k8s.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  hosts:
    - "grafana.oswee.local"
  gateways:
    - grafana-gateway
  http:
    - route:
        - destination:
            host: grafana
            port:
              number: 3000
...
